Данные о фильмах и пользователях вынесены в отдельные хранилища. Пользователи могут добавлять друг друга в друзья и ставить фильмам лайки.